--- a/bc-react/src/style/Events.scss
+++ b/bc-react/src/style/Events.scss
@@ -1,9 +1,21 @@
 .voting {
   background-color: yellow;
   display: flex;
+  justify-content: space-between;
 }
 
 .option {
+}
+
+.events-page {
+  background-color: blue;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
+
+.event-date {
+  background-color: pink;
 }
 
 .place-details{
@@ -19,7 +31,7 @@
   font-family: 'Amatic SC', sans-serif;
   font-size: 40px;
     img{
-      width: 40px;
+      width: 85px;
     }
 }
 
