--- a/bc-react/src/style/Events.scss
+++ b/bc-react/src/style/Events.scss
@@ -109,6 +109,8 @@
   overflow: auto;
 
   .event-date {
+    padding-left: 20px;
+    padding-right: 20px;
     border-top: fuchsia 2px solid;
     border-bottom: fuchsia 2px solid;
     font-family: 'Amatic SC', sans-serif;
