--- a/bc-react/src/style/Events.scss
+++ b/bc-react/src/style/Events.scss
@@ -55,20 +55,16 @@
 }
 
 .after{
-  text-align: center;
   font-size: 120px;
 }
 
-.place .after {
+.after {
     position: absolute;
     top:0;
-    bottom:0;
-    left:0;
-    right:0;    // left: 0;
-    // width: 50%;
-    // height: 50%;
     display: none;
-    color: #FFF;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 
 .rsvp-button {
@@ -125,6 +121,7 @@
 
   .event-details {
     display: flex;
+    align-items: center;
     font-family: 'Amatic SC', sans-serif;
     font-size: 2.5em;
   }
