--- a/bc-react/src/style/UserLogin.scss
+++ b/bc-react/src/style/UserLogin.scss
@@ -4,12 +4,13 @@
     display: flex;
     height: 100vh;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: center;
   }
 
   .header-wrapper {
-    margin-top: 60px;
+    margin-top: -160px;
+    // margin-top: 60px;
   }
 
   form {
