--- a/bc-react/src/style/UserSignup.scss
+++ b/bc-react/src/style/UserSignup.scss
@@ -13,9 +13,14 @@
     display: flex;
     height: 100vh;
     flex-direction: column;
-    justify-content: flex-start;
+    // justify-content: flex-start;
+    justify-content: center;
   }
 
+  .header-wrapper{
+    margin-top: -160px;
+  }
+  
   form {
       input {
         text-align: center;
