--- a/bc-react/src/style/Events.scss
+++ b/bc-react/src/style/Events.scss
@@ -4,14 +4,21 @@
 }
 
 .option {
-  margin-top: 10px;
-  padding-left: 20px;
-  padding-right: 20px;
-  border: white 10px solid;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  border-bottom: black 10px solid;
+  border-top: black 5px solid;
+  background-color: white;
 }
 
 .place:hover{
   .after{display: flex;}
+}
+
+.vote{
+  padding-left: 50px;
+  padding-top: 14%;
 }
 
 .events-page {
@@ -34,7 +41,8 @@
   font-size: 50px;
   font-weight: bold;
   align-items: center;
-  margin: 10px;
+  margin-left: 20px;
+  margin-right: 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -58,7 +66,7 @@
     display: none;
     width: 100%;
     height: 100%;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
 }
 
 .rsvp-button {
@@ -125,8 +133,6 @@
 .flex-item{font-weight: normal;}
 
 .detail{width: 200px;}
-
-
 .place {width: 450px;}
 
 .place-img {
@@ -140,10 +146,10 @@
   font-size: 40px;
   text-align: center;
   color: black;
-  text-decoration: underline;
+  text-decoration: none;
   font-weight: bold;
-    a {color: black;}
-    a:hover{color: #d32323;}
+    a {color: black; text-decoration: none;}
+    a:hover{color: #d32323; cursor: pointer; text-decoration: underline;}
 }
 
 .RSVP {
