--- a/bc-react/src/style/UserProfile.scss
+++ b/bc-react/src/style/UserProfile.scss
@@ -8,8 +8,7 @@
     font-size: 52px;
     font-style: italic;
     font-weight: bold;
-    margin-top: -8px;
-    display: inline-block;
+    margin-top: 30px;
   }
 
   .editable {
@@ -26,7 +25,7 @@
 
   .read-only, .editable {
     font-family: 'Abel', sans-serif;
-    font-size: 1.3em;
+    font-size: 1.5em;
     border: none;
     background-color: white;
     padding-left: 5px;
@@ -49,13 +48,14 @@
     text-align: center;
     font-family: 'Amatic SC', sans-serif;
     font-size: 3em;
+    margin-right: 30px;
   }
 
   .field {
     font-weight: bold;
     border: none;
     font-family: 'Abel', sans-serif;
-    font-size: 1.3em;
+    font-size: 1.5em;
     padding-left: 5px;
     padding-right: 5px;
     white-space: nowrap;
@@ -72,7 +72,7 @@
       input {
         border: none;
         font-family: 'Abel', sans-serif;
-        font-size: 1.3em;
+        font-size: 1.5em;
         padding-left: 5px;
         padding-right: 5px;
         white-space: nowrap;
@@ -84,6 +84,7 @@
   .delete {
     padding-top: 10px;
     color: red;
+    font-size: 1.2em;
   }
 
   .delete:hover {
