--- a/bc-react/src/style/Places.scss
+++ b/bc-react/src/style/Places.scss
@@ -10,6 +10,12 @@
     font-weight: bold;
     text-align: center;
   }
+
+  .place-rating{
+    img {
+      width: 110px;
+    }
+  }
   .image img {
     width: 270px;
     height: 200px;
