--- a/bc-react/src/style/Messageboard.scss
+++ b/bc-react/src/style/Messageboard.scss
@@ -10,11 +10,15 @@
   border-top: 1px solid lightgray;
   border-left: 1px solid lightgray;
   border-right: 1px solid lightgray;
-  border-radius: 5px;
+  border-radius: 5px 5px 0px 0px;
   padding-left: 5px;
   box-shadow: 0.5px 0.5px 0.5px 0.5px gray;
   width: 200px;
   font-family: 'Amatic SC', sans-serif;
+  -webkit-user-select: none;  /* Chrome all / Safari all */
+  -moz-user-select: none;     /* Firefox all */
+  -ms-user-select: none;      /* IE 10+ */
+  user-select: none;          /* Likely future */
 }
 
 .sticky:hover {
@@ -22,7 +26,7 @@
 }
 
 .message-board {
-  margin-bottom: 50px;
+  margin-bottom: 42px;
   z-index: 50;
   right: 0;
   margin-right: 30px;
@@ -91,7 +95,7 @@
 }
 
 .message-content {
-  font-size: 18px;
+  font-size: 17px;
   font-family: 'Abel', sans-serif;
   margin: 2px;
 }
