admin modal comprised of React Modal

--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -60,18 +60,13 @@
     cursor: pointer;
   }
 
-form {
-  background-color: rgba(white, 0.5);
-  padding: 10px;
-}
-
   form input {
     text-align: center;
     font-family: 'Abel', sans-serif;
-    font-size: .9em;
+    font-size: 20px;
   }
 
-  .submit-button {
+  .submitbutton {
     font-family: 'Amatic SC', sans-serif;
     font-size: 1.5em;
   }
