--- a/bc-react/src/style/AdminPage.scss
+++ b/bc-react/src/style/AdminPage.scss
@@ -60,13 +60,24 @@
     cursor: pointer;
   }
 
+form {
+  border: #def9a3 1px solid;
+  background-color: white;
+  padding: 20px 25px 20px 25px;
+}
+
   form input {
     text-align: center;
     font-family: 'Abel', sans-serif;
-    font-size: 20px;
+    font-size: .9em;
   }
 
-  .submitbutton {
+  .add-fields input {
+    border: gray 1px solid;
+  }
+
+  .submit-button {
+    margin-top: 10px;
     font-family: 'Amatic SC', sans-serif;
     font-size: 1.5em;
   }
@@ -168,7 +179,7 @@
   }
 
   #x {
-    background-color: rgba(white, 0.9);
+    background-color: white;
     color: red;
     font-weight: bold;
     font-size: 1.3em;
