moved responsive styling to own file and made EventDetail responsive

--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -16,6 +16,7 @@
 @import url('./Events.css');
 @import url('./Photos.css');
 @import url('./PageNotFound.css');
+@import url('./Responsive.css');
 
 .wrapper {
   display: flex;
