--- a/bc-react/src/style/App.scss
+++ b/bc-react/src/style/App.scss
@@ -23,17 +23,16 @@
 .email {
   text-align:center;
   font-family:'Garamond';
-  h1 {
-    margin-bottom: -20px;
+  .h1 {
+    font-size: 60px;
   }
-  img{
-    position: fixed;
-    bottom:0;
-    right:0;
-    height: 100%;
-    z-index: -1;
-    user-select: none;
+  .h2{
+    font-size: 20px;
   }
+  p{
+    font-family: 'Arial';
+  }
+
 }
 
 
